--- a/deployments/sidecar-demo/msm-admission-webhook.yaml
+++ b/deployments/sidecar-demo/msm-admission-webhook.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -5,7 +6,7 @@ metadata:
   labels:
     app: msm-admission-webhook
 spec:
-  clusterIP: 10.96.4.1
+  clusterIP: 10.96.0.2
   ports:
     - port: 443
       targetPort: 443
@@ -28,28 +29,19 @@ spec:
       labels:
         app: msm-admission-webhook
     spec:
-      tolerations:
-        - key: node-role.kubernetes.io/master
-          operator: Exists
-          effect: NoSchedule
-        - key: node-role.kubernetes.io/control-plane
-          operator: Exists
-          effect: NoSchedule
       serviceAccount: msm-admission-webhook-sa
       containers:
         - name: msm-admission-webhook
-          image: ciscolabs/msm-admission-webhook:latest
+          image: ciscolabs/msm-admission-webhook:sidecar
           imagePullPolicy: IfNotPresent
           env:
             - name: REPO
-              value: "ciscolabs"
+              value: "gilesheron"
             - name: TAG
               value: "latest"
             - name: MSM_SIDECAR
-              value: "msm-rtsp-stub"
+              value: "rtsp-sidecar-proxy"
             - name: IMAGE_PULL_POLICY
-              value: "IfNotPresent" 
+              value: IfNotPresent
             - name: "LOG_LVL"
               value: "DEBUG"
-      nodeSelector:
-        node-role.kubernetes.io/control-plane: ""
