--- a/deployments/msm/msm-controller.yaml
+++ b/deployments/msm/msm-controller.yaml
@@ -38,7 +38,7 @@ spec:
       containers:
         - name: msm-controller
           image: ciscolabs/msm-controller:latest
-          imagePullPolicy: Always 
+          imagePullPolicy: IfNotPresent 
           ports:
             - name: grpc
               protocol: TCP
