--- a/deployments/msm/msm-proxy.yaml
+++ b/deployments/msm/msm-proxy.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: msm-proxy
           image: ciscolabs/msm-proxy:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent 
           ports:
             - name: grpc
               protocol: TCP
