--- a/deployments/msm/webhook.yaml
+++ b/deployments/msm/webhook.yaml
@@ -51,5 +51,11 @@ spec:
               value: "IfNotPresent" 
             - name: "LOG_LVL"
               value: "DEBUG"
+            - name: "MSM_LOG_LVL"
+              value: "TRACE"
+            - name: "MSM_DATA_PLANE"
+              value: "172.18.0.2"
+            - name: "MSM_CONTROL_PLANE"
+              value: "http://10.96.3.1:9000"   
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
