--- a/deployments/msm/msm-gateway.yaml
+++ b/deployments/msm/msm-gateway.yaml
@@ -39,7 +39,7 @@ spec:
           env:
             - name: MSM_LOG_LVL
               value: "TRACE"
-            - name: MSM_DATA_PLANE
-              value: "172.18.0.2"
+            - name: LOCAL_RTP_PORT
+              value: "8000"
             - name: MSM_CONTROL_PLANE
               value: "http://10.96.3.1:9000"
