add trace option to controller

--- a/deployments/msm-demo/msm-controller.yaml
+++ b/deployments/msm-demo/msm-controller.yaml
@@ -43,5 +43,8 @@ spec:
             - name: grpc
               protocol: TCP
               containerPort: 9000
+          env:
+            - name: LOG_LVL
+              value: "TRACE"
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
