--- a/deployments/msm-helm/templates/serviceaccount.yaml
+++ b/deployments/msm-helm/templates/serviceaccount.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ .Values.cniClusterRole }}
   namespace: {{ .Values.nameSpace }}
   labels:
+    {{- include "msm.labels" . | nindent 4 }}
     app: {{ .Values.cniClusterRole }}
 ---
 # webhook-prep
@@ -13,3 +14,6 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.webhookServiceAccount }}
   namespace: {{ .Values.nameSpace }}
+  labels:
+    {{- include "msm.labels" . | nindent 4 }}
+
