--- a/deployments/msm-helm/templates/clusterrole.yaml
+++ b/deployments/msm-helm/templates/clusterrole.yaml
@@ -4,6 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Values.webhookClusterRole }}
   labels:
+    {{- include "msm.labels" . | nindent 4 }}
     rbac.authorization.k8s.io/aggregate-to-admin: "true"
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
 rules:
@@ -18,6 +19,7 @@ kind: ClusterRole
 metadata:
   name: {{ .Values.cniClusterRole }}
   labels:
+    {{- include "msm.labels" . | nindent 4 }}
     app: {{ .Values.cniClusterRole }}
 rules:
   - apiGroups: [""]
