--- a/deployments/msm-helm/templates/service.yaml
+++ b/deployments/msm-helm/templates/service.yaml
@@ -4,6 +4,7 @@ kind: Service
 metadata:
   name: msm-admission-webhook-svc
   labels:
+    {{- include "msm.labels" . | nindent 4 }}
     app: msm-admission-webhook
 spec:
   clusterIP: 10.43.4.1
@@ -19,6 +20,7 @@ kind: Service
 metadata:
   name: {{ .Values.controllerName }}
   labels:
+    {{- include "msm.labels" . | nindent 4 }}
     msm: controller
 spec:
   clusterIP: 10.43.3.1
@@ -36,6 +38,7 @@ kind: Service
 metadata:
   name: mystream
   labels:
+    {{- include "msm.labels" . | nindent 4 }}
     app: rtsp
 spec:
   clusterIP: 10.43.10.1
