--- a/deployments/gb-helm/msm/gbear/appmetadata.yaml
+++ b/deployments/gb-helm/msm/gbear/appmetadata.yaml
@@ -1,5 +1,5 @@
-displayName: msm
-description: media streaming mesh
+displayName: MSM
+description: Media Streaming Mesh
 # The following optional fields provide a more detailed properties to describe your GBAP.
 # Uncomment as required and modify field values specifically for your application.
 
