--- a/deployments/gb-helm/msm/charts/msm/templates/clusterrolebinding.yaml
+++ b/deployments/gb-helm/msm/charts/msm/templates/clusterrolebinding.yaml
@@ -8,6 +8,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: {{ .Values.webhookServiceAccount }}
+    namespace: gbear
 roleRef:
   kind: ClusterRole
   name: {{ .Values.webhookClusterRole }}
@@ -28,6 +29,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ .Values.cniClusterRole }}
+    namespace: gbear
 ---
 #msm-controller
 apiVersion: rbac.authorization.k8s.io/v1
@@ -38,6 +40,8 @@ metadata:
     {{- include "msm.labels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
+    name: default
+    namespace: gbear
 roleRef:
   kind: ClusterRole
   name: cluster-admin
