--- a/deployments/msm-gb-rtsp/templates/deployment.yaml
+++ b/deployments/msm-gb-rtsp/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       rtsp: client
   template:
     metadata:
+      namespace: gbear
       labels:
         rtsp: client
       annotations:
@@ -40,6 +41,7 @@ spec:
       rtsp: client
   template:
     metadata:
+      namespace: gbear
       labels:
         rtsp: client
       annotations:
@@ -65,6 +67,7 @@ spec:
       app: rtsp
   template:
     metadata:
+      namespace: gbear
       labels:
         app: rtsp
       annotations:
@@ -102,6 +105,7 @@ spec:
       app: rtsp2
   template:
     metadata:
+      namespace: gbear
       labels:
         app: rtsp2
       annotations:
