--- a/deployments/msm-helm/templates/daemonset.yaml
+++ b/deployments/msm-helm/templates/daemonset.yaml
@@ -133,3 +133,23 @@ spec:
               value: "8000"
             - name: MSM_CONTROL_PLANE
               value: "http://10.96.3.1:9000"
+            - name: MSM_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+            - name: MSM_POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: MSM_POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: MSM_POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: MSM_POD_SERVICE_ACCOUNT
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.serviceAccountName
