--- a/deployments/msm-helm/templates/deployment.yaml
+++ b/deployments/msm-helm/templates/deployment.yaml
@@ -41,6 +41,26 @@ spec:
               value: "TRACE"
             - name: MSM_CONTROL_PLANE
               value: "http://10.96.3.1:9000"
+            - name: MY_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+            - name: MY_POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: MY_POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: MY_POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: MY_POD_SERVICE_ACCOUNT
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.serviceAccountName
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
 ---
